# polly

./: .gitignore  README.md  polly.el  polly.opam  test.polly
src/: ast.ml  checker.ml  dune  evaluator.ml  lexer.mli  lexer.mll  main.ml  parser.mly  polly.ml  r.ml  unionfind.ml  unionfind.mli
